--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
 		"precommit": "npm run lint"
 	},
 	"dependencies": {
-		"nuxt": "^1.0.0"
+		"nuxt": "^1.0.0",
+		"nuxt-sass-resources-loader": "^2.0.2"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.1",
-		"bootstrap-vue": "^2.0.0-rc.11",
 		"cross-env": "^5.2.0",
 		"eslint": "^4.15.0",
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
 		"eslint-plugin-vue": "^4.0.0",
+		"node-sass": "^4.9.0",
+		"sass-loader": "^7.0.3",
 		"tailwindcss": "^0.5.3"
 	}
 }
