--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"precommit": "npm run lint"
 	},
 	"dependencies": {
+		"hamburgers": "^0.9.3",
 		"nuxt": "^1.0.0",
 		"nuxt-sass-resources-loader": "^2.0.2"
 	},
