--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 	"dependencies": {
 		"hamburgers": "^0.9.3",
 		"nuxt": "^1.0.0",
-		"nuxt-sass-resources-loader": "^2.0.2"
+		"nuxt-google-maps-module": "^1.6.0",
+		"nuxt-sass-resources-loader": "^2.0.2",
+		"vue2-google-maps": "^0.10.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.1",
@@ -24,7 +26,7 @@
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
 		"eslint-plugin-vue": "^4.0.0",
-		"node-sass": "^4.9.0",
+		"node-sass": "^4.9.2",
 		"sass-loader": "^7.0.3",
 		"tailwindcss": "^0.5.3"
 	}
