--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"precommit": "npm run lint"
 	},
 	"dependencies": {
+		"ajv": "^6.5.2",
 		"hamburgers": "^0.9.3",
+		"node-sass": "^4.9.3",
 		"nuxt": "^1.4.2",
 		"nuxt-sass-resources-loader": "^2.0.2",
 		"vue2-google-maps": "^0.10.0"
