--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"node-sass": "^4.9.3",
 		"nuxt": "^1.4.2",
 		"nuxt-sass-resources-loader": "^2.0.2",
+		"vue-gallery": "^1.4.0",
 		"vue2-datepicker": "^2.4.0",
 		"vue2-google-maps": "^0.10.0"
 	},
