--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
 		"eslint-plugin-vue": "^4.0.0",
+		"glob-all": "^3.1.0",
+		"purgecss-webpack-plugin": "^1.2.1",
 		"sass-loader": "^7.0.3",
 		"tailwindcss": "^0.5.3"
 	}
