--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "odriscollsbar",
 	"version": "1.0.0",
-	"description": "Nuxt.js project",
+	"description": "O'Driscolls Bar and Beer Garden",
 	"author": "Scott Kennedy <scottyzen@gmail.com>",
 	"private": true,
 	"scripts": {
