--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
 	"author": "Scott Kennedy <scottyzen@gmail.com>",
 	"private": true,
 	"scripts": {
-		"dev": "cross-env HOST=192.168.0.3 PORT=3333 nuxt",
-		"build": "nuxt build",
-		"start": "nuxt start",
-		"generate": "nuxt generate",
+		"dev": "nuxt --modern",
+		"build": "nuxt build --modern",
+		"start": "nuxt start --modern",
+		"generate": "nuxt generate --modern",
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
 		"precommit": "npm run lint"
 	},
 	"dependencies": {
 		"ajv": "^6.5.2",
+		"axios": "^0.18.0",
+		"cloudinary-core": "^2.5.0",
 		"hamburgers": "^0.9.3",
 		"node-sass": "^4.9.3",
-		"nuxt": "^2.0.0",
+		"nuxt": "^2.3.4",
 		"nuxt-sass-resources-loader": "^2.0.2",
 		"vue-gallery": "^1.4.0",
 		"vue2-datepicker": "^2.4.0",
@@ -32,6 +34,6 @@
 		"glob-all": "^3.1.0",
 		"purgecss-webpack-plugin": "^1.2.1",
 		"sass-loader": "^7.0.3",
-		"tailwindcss": "^0.5.3"
+		"tailwindcss": "^0.7.2"
 	}
 }
