--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"nuxt": "^2.3.4",
 		"nuxt-sass-resources-loader": "^2.0.2",
 		"vue-gallery": "^1.4.0",
+		"vue2-animate": "^2.1.0",
 		"vue2-datepicker": "^2.4.0",
 		"vue2-google-maps": "^0.10.0"
 	},
