Added expire headers

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"node-sass": "^4.9.3",
 		"nuxt": "^2.3.4",
 		"nuxt-sass-resources-loader": "^2.0.2",
+		"nuxt-ssr-cache": "^1.4.3",
 		"vue-gallery": "^1.4.0",
 		"vue2-animate": "^2.1.0",
 		"vue2-datepicker": "^2.4.0",
