--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
 		"precommit": "npm run lint"
 	},
 	"dependencies": {
-		"ajv": "^6.5.2",
-		"axios": "^0.18.0",
-		"cloudinary-core": "^2.5.0",
+		"ajv": "^6.10.0",
+		"axios": "^0.18.1",
+		"cloudinary-core": "^2.6.3",
 		"hamburgers": "^0.9.3",
-		"node-sass": "^4.9.3",
+		"node-sass": "^4.12.0",
 		"nuxt": "^2.3.4",
 		"nuxt-sass-resources-loader": "^2.0.2",
 		"vue-gallery": "^1.4.0",
 		"vue2-animate": "^2.1.0",
 		"vue2-datepicker": "^2.4.0",
-		"vue2-google-maps": "^0.10.0"
+		"vue2-google-maps": "^0.10.6"
 	},
 	"devDependencies": {
 		"@bazzite/nuxt-netlify": "^0.1.0",
@@ -33,11 +33,11 @@
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
 		"eslint-plugin-vue": "^4.0.0",
-		"extend": ">=3.0.2",
+		"extend": "^3.0.2",
 		"glob-all": "^3.1.0",
-		"lodash": ">=4.17.11",
-		"purgecss-webpack-plugin": "^1.2.1",
-		"sass-loader": "^7.0.3",
+		"lodash": "^4.17.11",
+		"purgecss-webpack-plugin": "^1.5.0",
+		"sass-loader": "^7.1.0",
 		"tailwindcss": "^0.7.4"
 	}
 }
