--- a/package.json
+++ b/package.json
@@ -5,42 +5,42 @@
 	"author": "Scott Kennedy <scottyzen@gmail.com>",
 	"private": true,
 	"scripts": {
-		"dev": "nuxt --modern",
-		"build": "nuxt build --modern",
-		"start": "nuxt start --modern",
-		"generate": "nuxt generate --modern",
+		"dev": "nuxt",
+		"build": "nuxt build",
+		"start": "nuxt start",
+		"generate": "nuxt generate",
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
 		"precommit": "npm run lint"
 	},
 	"dependencies": {
-		"ajv": "^6.10.0",
+		"ajv": "^6.10.2",
 		"axios": "^0.18.1",
-		"cloudinary-core": "^2.6.3",
+		"cloudinary-core": "^2.8.0",
 		"hamburgers": "^0.9.3",
-		"node-sass": "^4.12.0",
-		"nuxt": "^2.8.0",
+		"node-sass": "^4.13.0",
+		"nuxt": "^2.11.0",
 		"sass-resources-loader": "^2.0.1",
 		"vue-gallery": "^1.4.0",
-		"vue2-animate": "^2.1.0",
-		"vue2-datepicker": "^2.4.0",
-		"vue2-google-maps": "^0.10.6"
+		"vue2-animate": "^2.1.3",
+		"vue2-datepicker": "^2.13.4",
+		"vue2-google-maps": "^0.10.7"
 	},
 	"devDependencies": {
-		"@bazzite/nuxt-netlify": "^0.1.0",
+		"@bazzite/nuxt-netlify": "^0.1.1",
 		"@nuxtjs/style-resources": "^0.1.2",
-		"acorn": "^6.1.1",
+		"acorn": "^6.4.0",
 		"acorn-dynamic-import": "^4.0.0",
 		"babel-eslint": "^8.2.1",
-		"cross-env": "^5.2.0",
+		"cross-env": "^5.2.1",
 		"eslint": "^4.15.0",
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
 		"eslint-plugin-vue": "^4.0.0",
 		"extend": "^3.0.2",
 		"glob-all": "^3.1.0",
-		"lodash": "^4.17.11",
-		"purgecss-webpack-plugin": "^1.5.0",
-		"sass-loader": "^7.1.0",
+		"lodash": "^4.17.15",
+		"purgecss-webpack-plugin": "^1.6.0",
+		"sass-loader": "^7.3.1",
 		"tailwindcss": "^0.7.4",
 		"webpack": "4.28.4"
 	}
