--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "files.exclude": {
+    "wip.psd": true,
+    "node_modules": true,
+    ".vscode": true,
+    ".nuxt": true,
+    ".editorconfig": true,
+    ".eslintrc.js": true,
+    ".gitignore": true
+  }
 }
