--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"precommit": "npm run lint"
 	},
 	"dependencies": {
+		"@nuxtjs/markdownit": "^1.2.7",
 		"ajv": "^6.10.2",
 		"axios": "^0.18.1",
 		"cloudinary-core": "^2.8.0",
