--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
     name: git-gateway
     branch: master
+
 media_folder: static/img
 public_folder: /img
 collections:
@@ -9,7 +10,7 @@ collections:
       format: json
       folder: assets/content/blog
       create: true
-      slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+      slug: "{{slug}}"
       editor:
           preview: false
       fields:
@@ -26,6 +27,8 @@ collections:
             name: body
             widget: markdown
           - label: "Featured Image"
-            name: thumbnail
-            widget: image
-            required: false
+            name: "thumbnail"
+            widget: "image"
+            media_library:
+                config:
+                    multiple: true
