--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,34 +1,45 @@
 backend:
-    name: git-gateway
-    branch: master
+  name: git-gateway
+  branch: master
 
 media_folder: static/img
 public_folder: /img
 collections:
-    - name: blog
-      label: Blog
-      format: json
-      folder: assets/content/blog
-      create: true
-      slug: "{{slug}}"
-      editor:
-          preview: false
-      fields:
-          - label: Title
-            name: title
-            widget: string
-          - label: "Publish Date"
-            name: date
-            widget: datetime
-          - label: Description
-            name: description
-            widget: string
-          - label: Body
-            name: body
-            widget: markdown
-          - label: "Featured Image"
-            name: "thumbnail"
-            widget: "image"
-            media_library:
-                config:
-                    multiple: true
+  - name: blog
+    label: Blog
+    format: json
+    folder: assets/content/blog
+    create: true
+    slug: "{{slug}}"
+    editor:
+      preview: false
+    fields:
+      - label: Title
+        name: title
+        widget: string
+      - label: "Publish Date"
+        name: date
+        widget: datetime
+      - label: Description
+        name: description
+        widget: string
+      - label: Body
+        name: body
+        widget: markdown
+      - label: "Featured Image"
+        name: "thumbnail"
+        widget: "image"
+        media_library:
+          config:
+            multiple: true
+
+  - name: "gallery"
+    label: "Gallery"
+    folder: assets/content/gallery
+    fields:
+      - label: "Featured Image"
+        name: "thumbnail"
+        widget: "image"
+        media_library:
+          config:
+            multiple: true
