--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,7 @@ collections:
     create: true
     slug: "{{slug}}"
     editor:
-      preview: false
+      preview: true
     fields:
       - label: Title
         name: title
@@ -35,13 +35,20 @@ collections:
 
   - name: "gallery"
     label: "Gallery"
+    format: json
     folder: assets/content/gallery
     create: true
     slug: "{{slug}}"
     editor:
-      preview: true
+      preview: false
     fields:
       - label: "Gallery"
         name: "galleryImages"
         widget: "list"
-        field: { label: Image, name: image, widget: image }
+        field:
+          {
+            label: Image,
+            name: image,
+            widget: image,
+            media_library: { config: { multiple: false } },
+          }
