Allow multi file upload

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,7 +32,7 @@ collections:
         widget: "image"
         media_library:
           config:
-            multiple: false
+            multiple: true
 
   - name: galleries
     label: Galleries
