--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,28 +30,22 @@ collections:
       - label: "Featured Image"
         name: "thumbnail"
         widget: "image"
-        media_library:
-          config:
-            multiple: true
 
   - name: galleries
     label: Galleries
     format: json
     folder: assets/content/gallery
-    create: true
+    create: false
     slug: "{{slug}}"
     editor:
       preview: false
     fields:
+      - label: "Gallery"
+        name: "thumbnail"
+        widget: "image"
       - label: Title
         name: title
         widget: string
       - label: "Publish Date"
         name: date
         widget: datetime
-      - label: "Gallery"
-        name: "thumbnail"
-        widget: "image"
-        media_library:
-          config:
-            multiple: true
