--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,21 +15,11 @@ collections:
     editor:
       preview: true
     fields:
-      - label: Title
-        name: title
-        widget: string
-      - label: "Publish Date"
-        name: date
-        widget: datetime
-      - label: Description
-        name: description
-        widget: string
-      - label: Body
-        name: body
-        widget: markdown
-      - label: "Featured Image"
-        name: "thumbnail"
-        widget: "image"
+      - { label: Title, name: title, widget: string }
+      - { label: "Publish Date", name: date, widget: datetime }
+      - { label: Description, name: description, widget: string }
+      - { label: Body, name: body, widget: markdown }
+      - { label: "Featured Image", name: "thumbnail", widget: "image" }
 
   - name: galleries
     label: Galleries
@@ -40,12 +30,6 @@ collections:
     editor:
       preview: false
     fields:
-      - label: "Gallery"
-        name: "thumbnail"
-        widget: "image"
-      - label: Title
-        name: title
-        widget: string
-      - label: "Publish Date"
-        name: date
-        widget: datetime
+      - { label: "Gallery", name: "thumbnail", widget: "image" }
+      - { label: Title, name: title, widget: string }
+      - { label: "Publish Date", name: date, widget: datetime }
