Allow multi file upload

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -34,3 +34,12 @@ collections:
           widget: datetime,
           media_library: { config: { multiple: true } },
         }
+
+  - name: "galleria"
+    label: "Gallery"
+    widget: "list"
+    optional: true
+    fields:
+      - { label: "Title", name: "imgTitle", widget: "string" }
+      - { label: "Gallery Image", name: "imgSrc", widget: "image" }
+      - { label: "Description", name: "imgDesc", widget: "string" }
