--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,19 +22,11 @@ collections:
 
   - name: gallery
     label: Gallery # Used in the UI
-    format: json
+    # format: json
     folder: assets/content/gallery
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    editor: { preview: false }
     fields: # The fields for each document, usually in front matter
-      - {
-          label: "Gallery",
-          name: "thumbnail",
-          widget: "image",
-          media_library: { config: { multiple: true } },
-          required: false,
-          tagname: "",
-        }
+      - { label: "Gallery", name: "thumbnail", widget: "image" }
       - { label: Title, name: title, widget: string }
       - { label: "Publish Date", name: date, widget: datetime }
