--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"dev": "nuxt",
 		"build": "nuxt build",
 		"start": "nuxt start",
-		"generate": "nuxt generate",
+		"export": "nuxt export",
+		"serve": "nuxt serve",
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
 		"precommit": "npm run lint"
 	},
