--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
 		"start": "nuxt start",
 		"export": "nuxt export",
 		"serve": "nuxt serve",
+		"generate": "nuxt generate",
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
 		"precommit": "npm run lint"
 	},
 	"dependencies": {
-		"@nuxtjs/markdownit": "^1.2.10",
+		"@nuxtjs/markdownit": "^1.2.7",
 		"ajv": "^6.12.3",
 		"axios": "^0.19.2",
 		"cloudinary-core": "^2.11.1",
