--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
 		"start": "nuxt start",
 		"export": "nuxt export",
 		"serve": "nuxt serve",
-		"generate": "nuxt generate",
-		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-		"precommit": "npm run lint"
+		"generate": "nuxt generate"
 	},
 	"dependencies": {
 		"@nuxtjs/markdownit": "^1.2.7",
