--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
 		"generate": "nuxt generate"
 	},
 	"dependencies": {
-		"@nuxtjs/markdownit": "^1.2.7",
+		"@nuxtjs/markdownit": "^1.2.10",
 		"ajv": "^6.12.3",
 		"axios": "^0.19.2",
 		"cloudinary-core": "^2.11.1",
 		"hamburgers": "^1.1.3",
-		"node-sass": "^4.13.0",
+		"node-sass": "^4.14.1",
 		"nuxt": "^2.14.0",
-		"sass-resources-loader": "^2.0.1",
+		"sass-resources-loader": "^2.0.3",
 		"vue-gallery": "^2.0.1",
 		"vue2-animate": "^2.1.3",
 		"vue2-datepicker": "^2.13.4",
@@ -29,10 +29,8 @@
 	"devDependencies": {
 		"@bazzite/nuxt-netlify": "^0.2.0",
 		"@nuxtjs/style-resources": "^0.1.2",
-		"acorn": "^6.4.0",
-		"acorn-dynamic-import": "^4.0.0",
-		"babel-eslint": "^8.2.1",
-		"cross-env": "^5.2.1",
+		"babel-eslint": "^10.1.0",
+		"cross-env": "^7.0.2",
 		"eslint": "^4.15.0",
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
@@ -41,8 +39,8 @@
 		"glob-all": "^3.2.1",
 		"lodash": "^4.17.19",
 		"purgecss-webpack-plugin": "^1.6.0",
-		"sass-loader": "^7.3.1",
+		"sass-loader": "^9.0.2",
 		"tailwindcss": "^0.7.4",
-		"webpack": "4.28.4"
+		"webpack": "^4.44.1"
 	}
 }
