--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 	"devDependencies": {
 		"@bazzite/nuxt-netlify": "^0.2.0",
 		"@nuxtjs/style-resources": "^0.1.2",
+		"acorn": "^6.4.1",
+		"acorn-dynamic-import": "^4.0.0",
 		"babel-eslint": "^10.1.0",
 		"cross-env": "^7.0.2",
 		"eslint": "^4.15.0",
@@ -41,6 +43,6 @@
 		"purgecss-webpack-plugin": "^1.6.0",
 		"sass-loader": "^9.0.2",
 		"tailwindcss": "^0.7.4",
-		"webpack": "^4.44.1"
+		"webpack": "4.28.4"
 	}
 }
