--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"export": "nuxt export",
-		"generate": "nuxt generate"
+		"generate": "nuxt generate",
+		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+		"precommit": "npm run lint"
 	},
 	"dependencies": {
 		"@nuxtjs/markdownit": "^1.2.10",
